# starlet-engine

./: CMakeLists.txt  README.md
inc/StarletEngine/: engine.hpp
inc/starlet-engine/: callbacks.hpp  engine.hpp  timer.hpp  window.hpp  window_manager.hpp
src/: callbacks.cpp  engine.cpp  timer.cpp  window.cpp  windowManager.cpp  window_manager.cpp
